# guiyang-mahjong-vision

./: AGENTS.md  README.md
docs/superpowers/plans/: 2026-06-30-guiyang-mahjong-vision.md  2026-07-02-guiyang-mahjong-portable-exe.md
docs/superpowers/specs/: 2026-06-30-guiyang-mahjong-rules.md  2026-06-30-guiyang-mahjong-vision-design.md  2026-07-02-guiyang-mahjong-portable-exe-design.md
guiyang-mahjong-vision/: .gitignore  README.md  build-exe.ps1  config.json  config.visible.example.json  mahjong-vision.spec  pyproject.toml  启动说明.txt
guiyang-mahjong-vision/docs/: visible-region-calibration.md
guiyang-mahjong-vision/scripts/: debug-visible-regions.py
guiyang-mahjong-vision/src/mahjong_vision/: advisor.py  app.py  calibration.py  capture.py  config.py  domain.py  image_ops.py  overlay.py  recognizer.py  templates.py  visible.py  visible_debug.py  visible_recognizer.py
guiyang-mahjong-vision/tests/: test_advisor.py  test_app.py  test_capture.py  test_config.py  test_image_ops.py  test_recognizer.py  test_replay.py  test_templates.py  test_visible.py  test_visible_app.py  test_visible_debug.py  test_visible_recognizer.py  test_visible_region_config.py
